# mcp-bodhi

./: README.md  mcp-bodhi.service  pyproject.toml
src/mcp_bodhi/: __init__.py  client.py  server.py
