[project]
name = "mcp-bodhi"
version = "0.1.0"
description = "MCP server for Fedora Bodhi"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-bodhi = "mcp_bodhi.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
